--- a/docs/developer/storefront/helper-methods.mdx
+++ b/docs/developer/storefront/helper-methods.mdx
@@ -11,9 +11,7 @@ The list is incomplete. We're working on it!
 
 ## `current_currency`
 
-Returns the currently selected currency. By default in Admin Dashboard this will be `store.default_currency`. This can be changed in the `Settings -> Store Defaults` page.
-
-```erb
+Returns the currently selected currency. By default in the Storefront this will be `store.default_currency`. This can be changed in the `Settings -> Store Defaults` page.
 <%= current_currency %>
 ```
 
