[Skip CI] fix storefront helper methods page

--- a/docs/developer/storefront/helper-methods.mdx
+++ b/docs/developer/storefront/helper-methods.mdx
@@ -12,6 +12,8 @@ The list is incomplete. We're working on it!
 ## `current_currency`
 
 Returns the currently selected currency. By default in the Storefront this will be `store.default_currency`. This can be changed in the `Settings -> Store Defaults` page.
+
+```erb
 <%= current_currency %>
 ```
 
