--- a/docs/snippets/objects/spree_user.mdx
+++ b/docs/snippets/objects/spree_user.mdx
@@ -32,7 +32,7 @@ import SpreeAddress from '/snippets/objects/spree_address.mdx';
   </ResponseField>
 
   <ResponseField name="tag_list" type="array">
-    User tags (tags are used managable by store admins)
+    User tags (tags are used manageable by store admins)
     Example:
 
     ```ruby
