--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -2144,6 +2144,7 @@ en:
     update_contact_information: Update contact information
     update_shipping_address: Update shipping address
     updated: Updated
+    updated_at: Updated at
     updating: Updating
     upload_image: Upload image
     url: URL
