Admin: improve filter badges

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -570,6 +570,7 @@ en:
       resend: Resend
       resolve: Mark as resolved
       save: Save
+      remove: Remove
       select_file: Select file
       send_invitation: Send invitation
       update: Update
