Configure address company field in the store preferences

--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -42,6 +42,9 @@ en:
         guest_checkout:
           description: Allow customers to checkout without creating an account.
           label: Allow guest checkout
+        special_instructions:
+          description: Allow customers to add special instructions to their order.
+          label: Display the special instructions field
         policy_copy: Checkout footer links are added automatically based on the %{policies_link} content.
       copied: Copied!
       copy_payment_link: Copy Payment Link
@@ -195,6 +198,9 @@ en:
       store_form:
         customer_support_email_help: This email is visible to your Store visitors in the Footer section
         new_order_notifications_email_help: If you want to receive an email notification every time someone places an Order please provide an email address for that notification to be sent to
+        company_field:
+          description: It shows the company field on the address form in the My Account section and on the checkout address step.
+          label: Display the company address field
       store_setup_tasks:
         add_billing_address: Add billing address
         add_products: Add products
