--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -631,6 +631,7 @@ en:
       successfully_updated: Updated successfully
       unsuccessfully_saved: There was an error while trying to save your address.
       unsuccessfully_updated: There was an update while trying to update your address.
+    address_settings: Address settings
     addresses: Addresses
     adjustable: Adjustable
     adjustment: Adjustment
