[Skip CI] added Google Analytics 4 guide

--- a/docs/integrations/integrations.mdx
+++ b/docs/integrations/integrations.mdx
@@ -12,6 +12,14 @@ description: "Learn how to connect your Spree Commerce store to third-party serv
   </Card>
 </CardGroup>
 
+## Analytics
+
+<CardGroup>
+  <Card title="Google Analytics 4" href="/integrations/analytics/google-analytics" img="/images/integrations/logos/google-analytics.png">
+    Google Analytics 4 is a powerful analytics tool that allows you to track user behavior, sales performance, and marketing effectiveness across your store.
+  </Card>
+</CardGroup>
+
 ## Marketing
 
 <CardGroup>
