--- a/docs/integrations/payments/stripe.mdx
+++ b/docs/integrations/payments/stripe.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Connect Stripe payments to Spree Commerce"
+sidebarTitle: Stripe
 description: "Learn how to set up and manage Spree's native Stripe integration."
 ---
 
@@ -25,13 +26,13 @@ After that, you need to make sure to restart the server.
 
 Sign in to your Spree admin dashboard and navigate to **Settings → Payments**.
 
-![](/docs/images/integrations/stripe/1.get_started.png)
+![](/images/integrations/stripe/1.get_started.png)
 
 Find Stripe under Available Payment Methods and click **Add**.
 
 This will redirect you to the Stripe setup form.
 
-![](/docs/images/integrations/stripe/2.setup_form.png)
+![](/images/integrations/stripe/2.setup_form.png)
 
 Simply copy and paste the **Publishable Key** and **Secret Key** from your Stripe dashboard into their respective fields and click **Create** to enable Stripe as a payment method on your store.
 
@@ -39,11 +40,11 @@ Simply copy and paste the **Publishable Key** and **Secret Key** from your Strip
   The **Publishable Key** and **Secret Key** can be found in the Get Started section of the Home screen in your Stripe dashboard. Alternatively, they can be found out in **Developers → API Keys**.
 </Note>
 
-![](/docs/images/integrations/stripe/3.stripe_enabled.png)
+![](/images/integrations/stripe/3.stripe_enabled.png)
 
 ### Additional Settings
 
-![](/docs/images/integrations/stripe/4.additional_settings.png)
+![](/images/integrations/stripe/4.additional_settings.png)
 
 You can optionally configure the following settings for your Stripe payment method:
 
