--- a/docs/integrations/analytics/google-analytics.mdx
+++ b/docs/integrations/analytics/google-analytics.mdx
@@ -1,9 +1,10 @@
 ---
-title: "Connect Google Analytics to Spree Commerce"
-description: "Learn how to set up and manage Spree’s native Google Analytics integration."
+title: "Connect Google Analytics 4 to Spree Commerce"
+sidebarTitle: Google Analytics 4
+description: "Learn how to set up and manage Spree’s native Google Analytics 4 integration."
 ---
 
-Spree Commerce comes with a native Google Analytics integration that allows you to track user behavior, sales performance, and marketing effectiveness across your store. 
+Spree Commerce comes with a native Google Analytics 4 integration that allows you to track user behavior, sales performance, and marketing effectiveness across your store. 
 
 With minimal setup required, you can gain valuable insights into how visitors interact with your site, which can help you make informed decisions to improve conversions, user experience, and overall business strategy.
 
@@ -13,18 +14,10 @@ With minimal setup required, you can gain valuable insights into how visitors in
 
 ## Installation
 
-Before you can enable Stripe, it must be installed. To do so, you need to run the following commands:
-
-- Add this extension to your Gemfile:
+Before you can enable Google Analytics 4, it must be installed. To do so, you need to run the following command:
 
 ```bash
-bundle add spree_google_analytics
-```
-
-- Run the install generator:
-
-```bash
-bundle exec rails g spree_google_analytics:install
+bundle add spree_google_analytics && bundle exec rails g spree_google_analytics:install
 ```
 
 After that, make sure to restart your server if it was running.
@@ -33,13 +26,13 @@ After that, make sure to restart your server if it was running.
 
 Sign in to your Spree admin dashboard and navigate to the **Integrations** tab.
 
-![](/docs/images/integrations/google-analytics/1.get_started.png)
+![](/images/integrations/google-analytics/1.get_started.png)
 
 Locate the Google Analytics tile under Analytics, and click **Connect Google Analytics**.
 
 This will redirect you to the setup page for Google Analytics integration.
 
-![](/docs/images/integrations/google-analytics/2.setup_form.png)
+![](/images/integrations/google-analytics/2.setup_form.png)
 
 Simply enter the **Measurement ID** from your Google Analytics account into the field and click **Create** to finalize the integration.
 
@@ -47,7 +40,7 @@ Simply enter the **Measurement ID** from your Google Analytics account into the 
   You can find the **Measurement ID** in the Home screen of your Google Analytics dashboard, if no data has been collected yet. Otherwise, it can be found by navigating to Admin settings \> Data Streams and then clicking on the property associated with your Spree site.
 </Note>
 
-![](/docs/images/integrations/google-analytics/3.integration_added.png)
+![](/images/integrations/google-analytics/3.integration_added.png)
 
 ## Event Tracking
 
