[Skip CI] fixed stripe install command

--- a/docs/integrations/payments/stripe.mdx
+++ b/docs/integrations/payments/stripe.mdx
@@ -17,7 +17,7 @@ In Spree Enterprise Edition, Stripe can also be used to power marketplace paymen
 Before you can enable Stripe, it must be installed. To do so, you need to run the following command:
 
 ```bash
-bundle add spree_stripe && bundle exec rails spree_stripe:install
+bundle add spree_stripe && bundle exec rails g spree_stripe:install
 ```
 
 After that, you need to make sure to restart the server.
