[Skip CI] fixed klaviyo install command

--- a/docs/integrations/marketing/klaviyo.mdx
+++ b/docs/integrations/marketing/klaviyo.mdx
@@ -17,7 +17,7 @@ With Spree’s native integration, you can start collecting meaningful data for 
 To install the Klaviyo integration, you need to run the following command:
 
 ```bash
-bundle add spree_klaviyo && bundle exec rails spree_klaviyo:install
+bundle add spree_klaviyo && bundle exec rails g spree_klaviyo:install
 ```
 
 After that, you need to make sure to restart the server.
