--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -77,6 +77,7 @@ en:
       integrations:
         invalid_integration_type: This integration is not allowed
         page_subtitle: Connect your store to third-party services to enhance customer experience.
+      import_created: Import started.
       manage_currencies: Manage Currencies
       manage_properties: Manage Properties
       manage_stock_locations: Manage Stock Locations
@@ -152,6 +153,7 @@ en:
         vertical_alignment: Vertical alignment
         youtube_video_url: Youtube video URL
       personal_details: Personal Details
+      processed: Processed
       products:
         active: Active
         all_statuses: All statuses
