--- a/storefront/config/locales/en.yml
+++ b/storefront/config/locales/en.yml
@@ -54,6 +54,8 @@ en:
         description: Take control of your settings and tailor your experience according to your preferences. Customize your notifications to suit your needs.
         join: Email me about new products, sales, and more. You can unsubscribe at any time.
         status: You are currently %{status} to the newsletters.
+      products:
+        pinch_to_zoom_html: Pinch to<br>zoom
       refund_action_not_required_message:
         order_canceled:
           fully: This order has been canceled. No further action is required. You will receive a refund within couple business days.
